# WolfwaveUpdate

./: .gitmodules  CMakeLists.txt  README.md
res/: wolfwave-icon-wolfonly.xcf  wolfwave-icon.xcf  wolfwave.manifest  wolfwave.qrc  wolfwave.rc
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
